# dint

./: CMakeLists.txt
include/dint/: block_statistics.hpp  dict_freq_index.hpp  dict_posting_list.hpp  dictionary_builders.hpp  dictionary_building_utils.hpp  dint_codecs.hpp  dint_configuration.hpp  multi_dictionary.hpp  rectangular_dictionary.hpp  single_dictionary.hpp  statistics_collectors.hpp
include/ds2i/: binary_collection.hpp  global_parameters.hpp
include/tgc/: TgcCoding.cpp  TgcCoding.h  VariableByteCoding.h
src/: create_freq_index.cpp  queries.cpp
test/: CMakeLists.txt  multi_tgc_encoding.cpp  test_generic_sequence.hpp  tgc_encoding.cpp
